syntax = "proto3";

package lantern.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "github.com/lantern-db/lantern/pb";


message Vertex {
    string key = 1;
    google.protobuf.Timestamp expiration = 2;
    oneof value {
        double float64 = 10;
        float float32 = 11;
        int32 int32 = 12;
        int64 int64 = 13;
        uint32 uint32 = 14;
        uint64 uint64 = 15;
        bool bool = 16;
        string string = 17;
        bytes bytes = 18;
        google.protobuf.Timestamp timestamp = 19;

        bool nil = 30;
    }
}

message Edge {
    string tail = 1;
    string head = 2;
    float weight = 3;
    google.protobuf.Timestamp expiration = 4;
}

message GraphStats {
    message VertexDegree {
        string key = 1;
        uint32 in = 2;
        uint32 out = 3;
    }

    repeated VertexDegree vertex_degrees = 1;
}

message Graph {
    repeated Vertex vertices = 1;
    repeated Edge edges = 2;
    GraphStats stats = 3;
}

enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_OK = 1;
    STATUS_INTERNAL_SERVER_ERROR = 2;
    STATUS_INVALID_REQUEST = 3;
}

message IlluminateRequest {
    string seed = 1;
    uint32 step = 2;
    uint32 top_k = 3;
}

message IlluminateResponse {
    Graph graph = 1;
    Status status = 2;
}

message GetVertexRequest {
    string key = 1;
}

message GetVertexResponse {
    Vertex vertex = 1;
}

message PutRequest {
    Graph graph = 1;
}

message PutResponse {
    Status status = 1;
}

message PutVertexRequest {
    repeated Vertex vertices = 1;
}

message PutVertexResponse {
    Status status = 1;
}

message PutEdgeRequest {
    repeated Edge edges = 1;
}

message PutEdgeResponse {
    Status status = 1;
}


service LanternService {
    rpc Illuminate (IlluminateRequest) returns (IlluminateResponse) {
        option (google.api.http) = {
            get: "/v1/illuminate/{seed}"
        };
    }
    rpc GetVertex (GetVertexRequest) returns (GetVertexResponse) {
        option (google.api.http) = {
            get: "/v1/vertices/{key}"
        };
    }
    rpc Put (PutRequest) returns (PutResponse) {
    }
    rpc PutVertex (PutVertexRequest) returns (PutVertexResponse) {
        option (google.api.http) = {
            put: "/v1/vertices"
            body: "*"
        };
    }
    rpc PutEdge (PutEdgeRequest) returns (PutEdgeResponse) {
        option (google.api.http) = {
            put: "/v1/edges"
            body: "*"
        };
    }
}
